# fast_user_switch

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README.md  common.cpp  common.h  fastuserswitch.cpp  fastuserswitch.h  fastuserswitchConfig.ui  plasma-applet-fastuserswitch.desktop  sessionwidget.cpp  sessionwidget.h
